--- a/splashy_app/templates/base.html
+++ b/splashy_app/templates/base.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="{% static 'css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'css/splashy.css' %}">
     <title>Michelle Glauser - San Francisco Blogger, Baker, Developer</title>
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,400,900|Bowlby+One+SC' rel='stylesheet' type='text/css'>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,400,900|Bowlby+One+SC' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 </head>
 <body>
     <div class="homepage">
