--- a/splashy_app/static/css/splashy.css
+++ b/splashy_app/static/css/splashy.css
@@ -38,13 +38,13 @@ body.homepage a.button:hover {background:#6af0b0; color:#fff; }
 
 /*blog pages*/
 
-a:link {text-decoration: none; }
+a:link {text-decoration: none; color: #e2e2e2;}
 a  {-webkit-transition: .25s;-moz-transition: .25s;-ms-transition: .25s;-o-transition: .25s;transition: .15s;}
-a:visited {text-decoration: none; }
+a:visited {text-decoration: none; color: #e2e2e2;}
 a:focus { outline: thin dotted; }
 a:hover, a:active { outline: 0; }
 a:active {  position: relative;  top:1px;}
-
+.navbar a { color: #c8c8c8;}
 
 /* typography */
 
@@ -131,7 +131,7 @@ footer a span {vertical-align:middle; font-size:1.2em; line-height: 0; padding:0
 
 /* end */
 
-#end a.button{background-color: #c8c8c8;  }
+#end a.button{background-color: #c8c8c8; color: white;}
 /*#top_return {padding: 1em}*/
 #top_return p {font-size: .8em;}
 p.back_to_top {margin-top:1em; font-family: 'Lato';}
