--- a/splashy_app/static/css/splashy.css
+++ b/splashy_app/static/css/splashy.css
@@ -78,15 +78,15 @@ p  {font-family: 'Lato', sans-serif; font-size: 1em; line-height: 1.5em; font-we
 /*navbar*/
 
 .about {border-bottom: 3px solid #ff8350;}
-.my_blog {border-bottom: 3px solid #6af0b0;}
-.coding {border-bottom: 3px solid #3ce9eb;}
-.projects {border-bottom: 3px solid #ebadff; }
+.coding {border-bottom: 3px solid #6af0b0;}
+.community {border-bottom: 3px solid #3ce9eb;}
+.my_blog {border-bottom: 3px solid #ebadff; }
 .contact {border-bottom: 3px solid #ff757a;}
 
 .about:hover {border-bottom:6px solid #ff8350;color: #ff8350;}
-.my_blog:hover {border-bottom:6px solid #6af0b0; color: #6af0b0;}
-.coding:hover {border-bottom:6px solid #3ce9eb; color: #3ce9eb;}
-.projects:hover, body.whatpage .categories {border-bottom:6px solid #ebadff; color: #ebadff;}#ebadff
+.coding:hover {border-bottom:6px solid #6af0b0; color: #6af0b0;}
+.community:hover {border-bottom:6px solid #3ce9eb; color: #3ce9eb;}
+.my_blog:hover, body.whatpage .categories {border-bottom:6px solid #ebadff; color: #ebadff;}#ebadff
 .contact:hover {border-bottom:6px solid #ff757a; color: #ff757a;}
 
 
@@ -112,15 +112,16 @@ nav a:active {top: 2px;}
 
 /* posts */
 
-.posts { height: 20em; overflow: hidden;}
+.posts { height: 1--%; overflow: hidden;}
 .post_content {padding: 1em;;}
 .post_content h2 {margin-bottom:.2em;  }
 .post_content p {margin:0; margin-bottom: .8em;}
+.post_content img {height:25%; width:25%; float:right; margin:-20px 10px 30px 10px;}
 .post_details {font-size: 1em !important}
 #about {background: #ff8350;  color: #fff; clear: both;}
-#my_blog {background: #6af0b0; color: #fff;}
-#coding {background: #3ce9eb; color: #fff;}
-#projects {background: #ebadff; color: #fff}
+#coding {background: #6af0b0; color: #fff;}
+#community {background: #3ce9eb; color: #fff;}
+#my_blog {background: #ebadff; color: #fff}
 #contact {background: #ff757a; color: #fff}
 
 
